fixed manifesto + css overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
+html,body{
+  overflow-x: hidden;
+}
+
 .AppContainer {
   display: flex;
   align-items: flex-start;
